--- a/src/View/pages/patientUserProfile/puprofile.scss
+++ b/src/View/pages/patientUserProfile/puprofile.scss
@@ -45,21 +45,25 @@
                     display: flex;
                     flex-direction: column;
                     width: 65%;
-                    border: 1px solid orange;
-                    height: 100vh;
+                    //border: 1px solid orange;
+                    height: max-content;
 
                     .body-item {
                         // width: 33.1%;
-                        border: 1px solid orange;
+                        // border: 1px solid orange;
                         display: flex;
                         flex-direction: column;
+                        background-color: white;
+                        border-radius: 20px;
     
                         .header-section {
                             display: flex;
                             flex-direction: row;
                             flex-wrap: wrap;
                             gap: 10px;
-                            padding: 20px;
+                            padding: 30px;
+                            margin-bottom: 10px;
+                            //border: 1px solid orange;
                         }
 
                         .body-body {
@@ -68,18 +72,19 @@
                                 display: flex;
                                 flex-direction: row;
                                 flex-wrap: wrap;
-                                padding: 15px;
+                                padding: 30px;
                                 gap: 20px;
+                                //background-color: #fff;
 
                                 section {
                                     display: flex;
                                     position: relative;
-                                    margin-bottom: 30px;
+                                    margin-bottom: 50px;
                                     // border: 1px solid orange;
 
                                     label {
                                         position: absolute;
-                                        margin: -20px 0px 10px 0px;
+                                        margin: -20px 0px 10px 6px;
                                         font-size: 12px;
                                         width: max-content;
                                     }
@@ -89,22 +94,42 @@
                                         border-radius: 9px;
                                         cursor: pointer;
                                         color: #333333;
-                                        // background-color: #ffffff;
                                         padding: 8px 12px;
                                         cursor: pointer;
                                         border: 1px solid #e6e6e6;
+                                        height: 40px;
 
                                         //Replace default arrow
                                         appearance: none;
                                         -webkit-appearance: none;
                                         -moz-appearance: none;
-                                        background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www/w3.org/2000/svg" width="100" height="50"><polygon points="0,0 100,0 50,50" style="fill:%23666666;" /></svg>');
-                                        background-position: right 10px top 50%;
+                                        //background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www/w3.org/2000/svg" width="100" height="50"><polygon points="0,0 100,0 50,50" style="fill:%23666666;" /></svg>');
+                                        //background-position: right 10px top 50%;
 
                                     }
 
-                                    .formSelect:hover {
-                                        outline: none;
+                                    .formInput {
+                                        font-size: 12px;
+                                        border-radius: 9px;
+                                        cursor: pointer;
+                                        color: #333333;
+                                        padding: 8px 12px;
+                                        cursor: pointer;
+                                        border: 1px solid #e6e6e6;
+                                        width: 260px;
+                                    }
+
+                                    .formTextArea {
+                                        width: 700px;
+                                        padding: 20px;
+                                        border-radius: 2em;
+                                        border: 1px solid #e0e0e0;
+                                        // height: 100px;
+                                    }
+
+                                    input:focus, textarea:focus, select:focus {
+                                        outline: #2196f3;
+                                        border: 1px solid #2196f3;
                                     }
                                 }
                             }
@@ -116,21 +141,26 @@
                     display: flex;
                     flex-direction: column;
                     width: 30%;
-                    border: 1px solid orange;
+                    //border: 1px solid orange;
                     height: 100vh;
+                    gap: 30px;
 
                     .body-item {
                         // width: 33.1%;
-                        border: 1px solid orange;
+                        //border: 1px solid orange;
                         display: flex;
                         flex-direction: column;
+                        background-color: white;
+                        border-radius: 20px;
     
                         .header-section {
                             display: flex;
                             flex-direction: row;
                             flex-wrap: wrap;
                             gap: 10px;
-                            padding: 20px;
+                            padding: 30px;
+                            margin-bottom: 10px;
+                            //border: 1px solid orange;
                         }
 
                         .body-body {
@@ -139,19 +169,64 @@
                                 display: flex;
                                 flex-direction: row;
                                 flex-wrap: wrap;
-                                padding: 15px;
+                                padding: 30px;
                                 gap: 20px;
 
                                 section {
                                     display: flex;
                                     position: relative;
-                                    border: 1px solid orange;
+                                    margin-bottom: 50px;
+                                    //border: 1px solid orange;
+                                    width: 100%;
 
                                     label {
                                         position: absolute;
-                                        margin: -20px 0px 10px 0px;
+                                        margin: -20px 0px 10px 6px;
                                         font-size: 12px;
                                         width: max-content;
+                                    }
+
+                                    .formSelect {
+                                        font-size: 12px;
+                                        border-radius: 9px;
+                                        cursor: pointer;
+                                        color: #333333;
+                                        padding: 8px 12px;
+                                        cursor: pointer;
+                                        border: 1px solid #e6e6e6;
+                                        height: 40px;
+
+                                        //Replace default arrow
+                                        appearance: none;
+                                        -webkit-appearance: none;
+                                        -moz-appearance: none;
+                                        //background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www/w3.org/2000/svg" width="100" height="50"><polygon points="0,0 100,0 50,50" style="fill:%23666666;" /></svg>');
+                                        //background-position: right 10px top 50%;
+
+                                    }
+
+                                    .formInput {
+                                        font-size: 12px;
+                                        border-radius: 9px;
+                                        cursor: pointer;
+                                        color: #333333;
+                                        padding: 8px 12px;
+                                        cursor: pointer;
+                                        border: 1px solid #e6e6e6;
+                                        width: 100%;
+                                    }
+
+                                    .formTextArea {
+                                        width: 100%;
+                                        padding: 20px;
+                                        border-radius: 2em;
+                                        border: 1px solid #e0e0e0;
+                                        // height: 100px;
+                                    }
+
+                                    input:focus, textarea:focus, select:focus {
+                                        outline: #2196f3;
+                                        border: 1px solid #2196f3;
                                     }
                                 }
                             }
