--- a/src/View/pages/patientUserProfile/puprofile.scss
+++ b/src/View/pages/patientUserProfile/puprofile.scss
@@ -20,8 +20,8 @@
         }
 
         .puprofile-body {
-            height: 100vh;
-            // height: max-content;
+            // height: 100vh;
+            height: max-content;
             width: 100%;
             // border: 1px solid orange;
             background-color: #fafafa;
@@ -29,9 +29,44 @@
             .puprofile-body-header {
                 display: flex;
                 flex-direction: row;
-                flex-wrap: wrap;
-                border: 1px solid orange;
+                //border: 1px solid orange;
                 height: 100px;
+                background-color: white;
+                margin: 30px 0px 20px 0px;
+
+                .left-info {
+                    width: 10%;
+                    //border: 1px solid orange;
+                    padding: 20px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    .pic-holder {
+                        border-radius: 50%;
+                        overflow: hidden;
+                        //border: 1px solid orange;
+                        height: 100px;
+                        width: 100px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        
+                        img {
+                            width: 80px;
+                        }
+                    }
+                }
+
+                .right-info {
+                    width: 90%;
+                    //border: 1px solid orange;
+                    padding: 20px;
+                    display: flex;
+                    align-items: center;
+                    font-size: 30px;
+                    font-weight: 300;
+                }
             }
 
             .puprofile-body-body {
@@ -80,6 +115,7 @@
                                     display: flex;
                                     position: relative;
                                     margin-bottom: 50px;
+                                    width: max-content;
                                     // border: 1px solid orange;
 
                                     label {
@@ -124,7 +160,7 @@
                                         padding: 20px;
                                         border-radius: 2em;
                                         border: 1px solid #e0e0e0;
-                                        // height: 100px;
+                                        height: 100px;
                                     }
 
                                     input:focus, textarea:focus, select:focus {
