--- a/src/View/pages/patientUserProfile/puprofile.scss
+++ b/src/View/pages/patientUserProfile/puprofile.scss
@@ -271,6 +271,27 @@
                 }
             }
 
+            .puprofile-button-holder {
+                display: flex;
+                width: 100%;
+                // border: 1px solid orange;
+                align-items: center;
+                margin: 30px 0px 40px 0px;
+
+                button {
+                    padding: 10px;
+                    width: 200px;
+                    margin: 0px auto 0px auto;
+                    cursor: pointer;
+                    border: none;
+                    background-color: #005EFF; //new color
+                    color: white;
+                    height: 60px;
+                    font-size: 15px;
+                    border-radius: 9px;
+                }
+            }
+
         }
 
 
