--- a/src/View/pages/patientUserProfile/puprofile.scss
+++ b/src/View/pages/patientUserProfile/puprofile.scss
@@ -1,6 +1,7 @@
 .puprofile-container {
     display: flex;
     flex-direction: column;
+    position: relative;
 
     .puprofile-wrapper {
         height: max-content;
@@ -8,6 +9,7 @@
         // border: 1px solid black;
         display: flex;
         flex-direction: row;
+        //position: relative;
 
         .puprofile-sidenav {
             height: 100%;
@@ -17,6 +19,174 @@
 
         .puprofile-mobile {
             display: none;
+        }
+
+        .puprofile-modal-container {
+            //display: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background-color: rgba(0, 0, 0, .5);
+            //opacity: 0;
+            transition: opacity .2s ease;
+            height: 106%;
+            z-index: 20;
+            margin: -60px 0px 0px 0px;
+
+            .puprofile-modal-items {
+                height: 550px;
+                width: 500px;
+                margin: -360px 0px 0px 0px;
+                border: 1px solid blue;
+
+                .puprofile-modal-item {
+                    border: 1px solid orange;
+                    min-height: 550px;
+                    display: flex;
+                    flex-direction: column;
+                    position: relative;
+                    background-color: white;
+
+                    .modal-header {
+                        //border: 1px solid orange;
+                        text-align: center;
+                        color: #5f5f5f;
+                    }
+
+                    .modal-icon {
+                        display: flex;
+                        width: 100%;
+                        height: 200px;
+                        // border: 1px solid orange;
+
+                        img {
+                            width: max-content;
+                            height: 220px;
+                            margin: 0px auto 0px auto;
+                        }
+                    }
+
+                    .modal-description {
+                        padding: 20px;
+                        color: #5f5f5f;
+
+
+                        form {
+                            display: flex;
+                            flex-direction: row;
+                            flex-wrap: wrap;
+                            padding: 30px;
+                            gap: 7px;
+                            //background-color: #fff;
+
+                            section {
+                                display: flex;
+                                position: relative;
+                                margin-bottom: 25px;
+                                width: max-content;
+                                // border: 1px solid orange;
+
+                                label {
+                                    position: absolute;
+                                    margin: -20px 0px 10px 6px;
+                                    font-size: 12px;
+                                    width: max-content;
+                                }
+
+                                .formSelect {
+                                    font-size: 12px;
+                                    border-radius: 9px;
+                                    cursor: pointer;
+                                    color: #333333;
+                                    padding: 8px 12px;
+                                    cursor: pointer;
+                                    border: 1px solid #e6e6e6;
+                                    height: 40px;
+
+                                    //Replace default arrow
+                                    appearance: none;
+                                    -webkit-appearance: none;
+                                    -moz-appearance: none;
+                                    //background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www/w3.org/2000/svg" width="100" height="50"><polygon points="0,0 100,0 50,50" style="fill:%23666666;" /></svg>');
+                                    //background-position: right 10px top 50%;
+
+                                }
+
+                                .formInput {
+                                    font-size: 12px;
+                                    border-radius: 9px;
+                                    cursor: pointer;
+                                    color: #333333;
+                                    padding: 12px 12px;
+                                    cursor: pointer;
+                                    border: 1px solid #e6e6e6;
+                                    width: 260px;
+                                }
+
+                                .formTextArea {
+                                    width: 700px;
+                                    padding: 20px;
+                                    border-radius: 2em;
+                                    border: 1px solid #e0e0e0;
+                                    height: 100px;
+                                }
+
+                                input:focus, textarea:focus, select:focus {
+                                    outline: #2196f3;
+                                    border: 1px solid #2196f3;
+                                }
+
+                                .formInput.md {
+                                    width: 165px;
+                                }
+
+                                .formTextArea.md {
+                                    width: 365px;
+                                }
+                            }
+                        }
+                    }
+
+                    .modal-buttons {
+                        position: absolute;
+                        display: flex;
+                        width: max-content;
+                        //border: 1px solid orange;
+                        bottom: 0;
+                        right: 0;
+                        height: 50px;
+                        align-items: center;
+                        justify-content: right;
+                        gap: 20px;
+                        padding: 0px 20px;
+                        margin: 0px 30px 10px 0px;
+
+                        button {
+                            height: max-content;
+                            width: max-content;
+                            min-width: 100px;
+                            padding: 10px 20px;
+                            border-radius: 7px;
+                            background-color: #005EFF;
+                            color: white;
+                            border: none;
+                            font-size: 13px;
+                            cursor: pointer;
+                        }
+
+                        button.passive {
+                            background-color: #fafafa;
+                            color: #acacac;
+                        }
+                    }
+
+                }
+            }
         }
 
         .puprofile-body {
